APIs/microsoft.com/cognitiveservices-ComputerVision/2.1/cpp-qt-client/README.md
# C++ Qt API client

# 

Computer Vision Client

- API version: 2.1
- Generator version: 7.9.0

The Computer Vision API provides state-of-the-art algorithms to process images and return information. For example, it can be used to determine if an image contains mature content, or it can be used to find all the faces in an image.  It also has other features like estimating dominant and accent colors, categorizing the content of images, and describing an image with complete English sentences.  Additionally, it can also intelligently generate images thumbnails for displaying large images effectively.


*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:

1. CMake 3.2+
2. Qt
3. C++ Compiler

## Getting Started

example.h:
```c++

#include <iostream>
#include "../client/OAIDefaultApi.h"

using namespace test_namespace;

class Example : public QObject {
    Q_OBJECT
    OAIImageUrl create();
    QList<QString> create();
    QList<QString> create();
    QString create();
    QList<QString> create();
public Q_SLOTS:
   void exampleFunction1();
};

```

example.cpp:
```c++

#include "../client/OAIDefaultApi.h"
#include "example.h"
#include <QTimer>
#include <QEventLoop>

OAIImageUrl Example::create(){
    OAIImageUrl obj;
QList&lt;QString&gt; Example::create(){
    QList<QString> obj;
QList&lt;QString&gt; Example::create(){
    QList<QString> obj;
QString Example::create(){
    QString obj;
QList&lt;QString&gt; Example::create(){
    QList<QString> obj;
 return obj;
}

void Example::exampleFunction1(){
     OAIDefaultApi apiInstance;
     
      // Configure API key authorization: apim_key
      apiInstance.setApiKey("YOUR API KEY NAME","YOUR API KEY");

      QEventLoop loop;
      connect(&apiInstance, &OAIDefaultApi::analyzeImageSignal, [&]() {
          loop.quit();
      });
      connect(&apiInstance, &OAIDefaultApi::analyzeImageSignalE, [&](QNetworkReply::NetworkError, QString error_str) {
          qDebug() << "Error happened while issuing request : " << error_str;
          loop.quit();
      });

      OAIImageUrl oai_image_url = create(); // OAIImageUrl | A JSON document with a URL pointing to the image that is to be analyzed.

      QEventLoop loop;
      connect(&apiInstance, &OAIDefaultApi::analyzeImageSignal, [&]() {
          loop.quit();
      });
      connect(&apiInstance, &OAIDefaultApi::analyzeImageSignalE, [&](QNetworkReply::NetworkError, QString error_str) {
          qDebug() << "Error happened while issuing request : " << error_str;
          loop.quit();
      });

      QList<QString> visual_features = create(); // QList<QString> | A string indicating what visual feature types to return. Multiple values should be comma-separated. Valid visual feature types include: Categories - categorizes image content according to a taxonomy defined in documentation. Tags - tags the image with a detailed list of words related to the image content. Description - describes the image content with a complete English sentence. Faces - detects if faces are present. If present, generate coordinates, gender and age. ImageType - detects if image is clipart or a line drawing. Color - determines the accent color, dominant color, and whether an image is black&white. Adult - detects if the image is pornographic in nature (depicts nudity or a sex act), or is gory (depicts extreme violence or blood). Sexually suggestive content (aka racy content) is also detected. Objects - detects various objects within an image, including the approximate location. The Objects argument is only available in English. Brands - detects various brands within an image, including the approximate location. The Brands argument is only available in English.

      QEventLoop loop;
      connect(&apiInstance, &OAIDefaultApi::analyzeImageSignal, [&]() {
          loop.quit();
      });
      connect(&apiInstance, &OAIDefaultApi::analyzeImageSignalE, [&](QNetworkReply::NetworkError, QString error_str) {
          qDebug() << "Error happened while issuing request : " << error_str;
          loop.quit();
      });

      QList<QString> details = create(); // QList<QString> | A string indicating which domain-specific details to return. Multiple values should be comma-separated. Valid visual feature types include: Celebrities - identifies celebrities if detected in the image, Landmarks - identifies notable landmarks in the image.

      QEventLoop loop;
      connect(&apiInstance, &OAIDefaultApi::analyzeImageSignal, [&]() {
          loop.quit();
      });
      connect(&apiInstance, &OAIDefaultApi::analyzeImageSignalE, [&](QNetworkReply::NetworkError, QString error_str) {
          qDebug() << "Error happened while issuing request : " << error_str;
          loop.quit();
      });

      QString language = create(); // QString | The desired language for output generation. If this parameter is not specified, the default value is &quot;en&quot;.Supported languages:en - English, Default. es - Spanish, ja - Japanese, pt - Portuguese, zh - Simplified Chinese.

      QEventLoop loop;
      connect(&apiInstance, &OAIDefaultApi::analyzeImageSignal, [&]() {
          loop.quit();
      });
      connect(&apiInstance, &OAIDefaultApi::analyzeImageSignalE, [&](QNetworkReply::NetworkError, QString error_str) {
          qDebug() << "Error happened while issuing request : " << error_str;
          loop.quit();
      });

      QList<QString> description_exclude = create(); // QList<QString> | Turn off specified domain models when generating the description.
      apiInstance.analyzeImage(oai_image_urlvisual_featuresdetailslanguagedescription_exclude);
      QTimer::singleShot(5000, &loop, &QEventLoop::quit);
      loop.exec();
  }

```

## Documentation for Servers

Parameterized Servers are supported. Define a server in the API for each endpoint with arbitrary numbers of variables:

```yaml
servers:
- url: http://{server}:{port}/{basePath}
  description: Description of the Server
  variables:
    server:
        enum:
          - 'petstore'
          - 'qa-petstore'
          - 'dev-petstore'
        default: 'petstore'
    port:
      enum:
        - '3000'
        - '1000'
      default: '3000'
    basePath:
      default: v1
```
To change the default variable, use this function in each Api:
```c++
int setDefaultServerValue(int serverIndex,const QString &operation, const QString &variable,const QString &val);
```
The parameter "serverIndex" will choose a server from the server list for each endpoint. There is always at least one server with index 0. The Parameter "operation" should be the desired endpoint operationid.
Variable is the name of the variable you wish to change and the value is the new default Value.
The function will return -1 when the variable does not exists, -2 if value is not defined in the variable enum and -3 if the operation is not found.

If your endpoint has multiple server objects in the servers array, you can set the server that will be used with this function:
```c++
void setServerIndex(const QString &operation, int serverIndex);
```
Parameter "operation" should be your operationid. "serverIndex" is the index you want to set as your default server. The function will check if there is a server with your index.
Here is an example of multiple servers in the servers array. The first server will have index 0 and the second will have index 1.
```yaml
servers:
- url: http://{server}:8080/
  description: Description of the Server
  variables:
    server:
        enum:
          - 'petstore'
          - 'qa-petstore'
          - 'dev-petstore'
        default: 'petstore'
- url: https://localhost:8080/v1
```

## Documentation for Authorization

Authentication schemes defined for the API:
### apim_key


- **Type**: API key
- **API key parameter name**: Ocp-Apim-Subscription-Key
- **Location**: HTTP header


## Author




## License

 for more information visit []()